@@ -68,19 +68,10 @@ $session_name = 'phpMyAdmin';
 @session_name($session_name);
 
 if (! isset($_COOKIE[$session_name])) {
-    // on first start of session we will check for errors
+    // on first start of session we check for errors
     // f.e. session dir cannot be accessed - session file not created
-    ob_start();
-    $old_display_errors = ini_get('display_errors');
-    $old_error_reporting = error_reporting(E_ALL);
-    @ini_set('display_errors', 1);
     $r = session_start();
-    @ini_set('display_errors', $old_display_errors);
-    error_reporting($old_error_reporting);
-    unset($old_display_errors, $old_error_reporting);
-    $session_error = ob_get_contents();
-    ob_end_clean();
-    if ($r !== true || ! empty($session_error)) {
+    if ($r !== true || $GLOBALS['error_handler']->hasErrors()) {
         setcookie($session_name, '', 1);
         PMA_fatalError('strSessionStartupErrorGeneral');
     }
