@@ -10,6 +10,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 3.1.1.0 (not yet released)
 - patch #2242765 [core] Navi panel server links wrong,
   thanks to Martin Stricker - martinstricker
+- bug #2186823 [core] bad session.save_path not detected 
 
 3.1.0.0 (not yet released)
 + [auth] Support for Swekey hardware authentication,
